[gd_scene load_steps=10 format=3 uid="uid://c8en7voy2lre7"]

[ext_resource type="Script" path="res://scripts/ceo.gd" id="1_7ej7h"]
[ext_resource type="SpriteFrames" uid="uid://bmbxa4qe3nm4y" path="res://sprites/fighters/ceo.tres" id="2_0sd2j"]
[ext_resource type="AudioStream" uid="uid://cftqwnffwppc6" path="res://sounds/sfx/ceo_hurt.mp3" id="3_8kw5l"]
[ext_resource type="PackedScene" uid="uid://krgajkm6wgc6" path="res://scenes/attack.tscn" id="4_q8cp5"]
[ext_resource type="AudioStream" uid="uid://bad4vhs1ax2sl" path="res://sounds/sfx/ceo_attack.mp3" id="5_01t07"]
[ext_resource type="PackedScene" uid="uid://rgdpxpaeny10" path="res://scenes/flying_money.tscn" id="6_udxvw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_or4rs"]
size = Vector2(24, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_faucp"]
size = Vector2(19, 21.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_eps8k"]
radius = 3.16228

[node name="CEO" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4115
script = ExtResource("1_7ej7h")

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 4)
sprite_frames = ExtResource("2_0sd2j")
animation = &"idle"
frame_progress = 0.260489

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(6, -1)
shape = SubResource("RectangleShape2D_or4rs")

[node name="Hitstun" type="Node2D" parent="."]

[node name="HitstunTimer" type="Timer" parent="Hitstun"]
one_shot = true

[node name="HitstunSFX" type="AudioStreamPlayer" parent="Hitstun"]
stream = ExtResource("3_8kw5l")

[node name="Attacks" type="Node2D" parent="."]

[node name="Bump" parent="Attacks" instance=ExtResource("4_q8cp5")]
collision_layer = 8
collision_mask = 1
length = 0.6
windup = 0.2
hitbox_time = 0.2
hitstun_length = 1.0
freeze_frame_length = 0.3
damage = 15.0
knockback = Vector2(-4000, -900)

[node name="HitBox" parent="Attacks/Bump" index="3"]
position = Vector2(-15.5, -1.75)
shape = SubResource("RectangleShape2D_faucp")

[node name="SFX" parent="Attacks/Bump" index="4"]
stream = ExtResource("5_01t07")

[node name="ThrowMoney" parent="Attacks" instance=ExtResource("4_q8cp5")]
collision_layer = 8
collision_mask = 1
length = 1.16
windup = 0.5
projectile = ExtResource("6_udxvw")
throw_projectile = true

[node name="HitBox" parent="Attacks/ThrowMoney" index="3"]
position = Vector2(-12, -6)
shape = SubResource("CircleShape2D_eps8k")

[node name="SFX" parent="Attacks/ThrowMoney" index="4"]
stream = ExtResource("5_01t07")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="StrafeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BlockTimer" type="Timer" parent="."]
one_shot = true

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Hitstun/HitstunTimer" to="." method="_on_hitstun_timeout"]
[connection signal="attack_finished" from="Attacks/Bump" to="." method="_on_attack_finished"]
[connection signal="attack_finished" from="Attacks/ThrowMoney" to="." method="_on_attack_finished"]
[connection signal="send_projectile" from="Attacks/ThrowMoney" to="." method="_on_send_projectile"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="StrafeTimer" to="." method="_on_strafe_timer_timeout"]
[connection signal="timeout" from="BlockTimer" to="." method="_on_block_timer_timeout"]

[editable path="Attacks/Bump"]
[editable path="Attacks/ThrowMoney"]
